--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
+<h1>Heading 1</h1>
 <p>Hello world! This is HTML5 Boilerplate.</p>
 <p>Welcome to the MATC, my name is Andre Morales</p>
 <p><b>This is my new code</b></p>
