--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 <p>Hello world! This is HTML5 Boilerplate.</p>
 <p>Welcome to the MATC, my name is Andre Morales</p>
 <p><b>This is my new code</b></p>
+<p>This is Thursday Branch Code</p>
 <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
